// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link with custom class should render link properly 1`] = `
<a
  className="link my classes"
  href="/test"
  target="_self"
>
  my link
</a>
`;

exports[`Link with modifier block should render link properly 1`] = `
<a
  className="link link--block"
  href="/test"
  target="_self"
>
  Test
</a>
`;

exports[`Link with modifier compose by primary and large and block should render link properly 1`] = `
<a
  className="link link--primary link--large link--block"
  href="/test"
  target="_self"
>
  Test
</a>
`;

exports[`Link with modifier large should render link properly 1`] = `
<a
  className="link link--large"
  href="/test"
  target="_self"
>
  Test
</a>
`;

exports[`Link with modifier medium should render link properly 1`] = `
<a
  className="link link--medium"
  href="/test"
  target="_self"
>
  Test
</a>
`;

exports[`Link with modifier primary should render link properly 1`] = `
<a
  className="link link--primary"
  href="/test"
  target="_self"
>
  Test
</a>
`;

exports[`Link with modifier secondary should render link properly 1`] = `
<a
  className="link link--secondary"
  href="/test"
  target="_self"
>
  Test
</a>
`;

exports[`Link with modifier small should render link properly 1`] = `
<a
  className="link link--small"
  href="/test"
  target="_self"
>
  Test
</a>
`;

exports[`Link with modifier tertiary should render link properly 1`] = `
<a
  className="link link--tertiary"
  href="/test"
  target="_self"
>
  Test
</a>
`;

exports[`Link with target should render link properly 1`] = `
<a
  className="link"
  href="/test"
  target="_blank"
>
  link
</a>
`;

exports[`Link with url should render link properly 1`] = `
<a
  className="link"
  href="/test"
  target="_self"
>
  link with href
</a>
`;
